--- a/index.html
+++ b/index.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Farm Management App</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Farm Manager PWA</title>
+    <meta name="theme-color" content="#4CAF50">
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    <!-- Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- jsPDF -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+</head>
+<body>
+    <div id="app">
+        <!-- Welcome Screen -->
+        <section id="welcome-screen" class="screen active">
+            <header>
+                <h1>Farm Manager</h1>
+                <p>Manage your dairy and poultry farm efficiently</p>
+            </header>
+            <div class="selection-cards">
+                <div class="card dairy-card" data-livestock="dairy">
+                    <i class="fas fa-cow"></i>
+                    <h2>Dairy Management</h2>
+                    <p>Track milk production, herd health, and finances</p>
+                </div>
+                <div class="card poultry-card" data-livestock="poultry">
+                    <i class="fas fa-egg"></i>
+                    <h2>Poultry Management</h2>
+                    <p>Monitor egg production, flock health, and expenses</p>
+                </div>
+            </div>
+            <div class="action-buttons">
+                <button id="backup-btn" class="btn-secondary"><i class="fas fa-download"></i> Create Backup</button>
+                <button id="restore-btn" class="btn-secondary"><i class="fas fa-upload"></i> Restore Backup</button>
+                <button id="login-btn" class="btn-primary"><i class="fas fa-user"></i> Login / Sign Up</button>
+            </div>
+        </section>
+
+        <!-- Dashboard Screen (loaded dynamically by JS) -->
+        <section id="dashboard-screen" class="screen"></section>
+
+        <!-- Other screens (loaded dynamically) -->
+        <section id="herd-screen" class="screen"></section>
+        <section id="history-screen" class="screen"></section>
+        <section id="finance-screen" class="screen"></section>
+        <section id="health-screen" class="screen"></section>
+        <section id="reports-screen" class="screen"></section>
+        <section id="settings-screen" class="screen"></section>
+
+        <!-- Bottom Navigation (shown after livestock selection) -->
+        <nav id="bottom-nav" class="hidden">
+            <a href="#dashboard" class="nav-item active"><i class="fas fa-home"></i><span>Dashboard</span></a>
+            <a href="#history" class="nav-item"><i class="fas fa-history"></i><span>History</span></a>
+            <a href="#finance" class="nav-item"><i class="fas fa-money-bill-wave"></i><span>Finance</span></a>
+            <a href="#health" class="nav-item"><i class="fas fa-heartbeat"></i><span>Health</span></a>
+            <a href="#reports" class="nav-item"><i class="fas fa-chart-bar"></i><span>Reports</span></a>
+            <a href="#settings" class="nav-item"><i class="fas fa-cog"></i><span>Settings</span></a>
+        </nav>
+
+        <!-- Floating Action Button -->
+        <button id="fab" class="fab hidden"><i class="fas fa-plus"></i></button>
+
+        <!-- Modals (for forms) -->
+        <div id="modal-container" class="modal-container"></div>
+    </div>
+
+    <script src="js/utils.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/sync.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/forms.js"></script>
+    <script src="js/charts.js"></script>
+    <script src="js/pdf.js"></script>
+    <script src="js/app.js"></script>
+</body>
 </html>
