--- a/index.html
+++ b/index.html
@@ -272,26 +272,43 @@
 
     <!-- Service Worker Registration -->
     <script>
+        // Force clear any existing service workers first
         if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('sw.js')
-                    .then(registration => {
-                        console.log('Service Worker registered with scope:', registration.scope);
-                    })
-                    .catch(error => {
-                        console.log('Service Worker registration failed:', error);
-                    });
+            // Unregister all service workers for this scope
+            navigator.serviceWorker.getRegistrations().then(function(registrations) {
+                for(let registration of registrations) {
+                    registration.unregister();
+                    console.log('Unregistered old service worker:', registration.scope);
+                }
+            }).then(() => {
+                // Wait a bit, then register new service worker
+                setTimeout(() => {
+                    navigator.serviceWorker.register('sw.js', { scope: './' })
+                        .then(registration => {
+                            console.log('New Service Worker registered with scope:', registration.scope);
+                            // Force update
+                            registration.update();
+                        })
+                        .catch(error => {
+                            console.log('Service Worker registration failed:', error);
+                        });
+                }, 1000);
             });
         }
-
-        // Check online status
-        window.addEventListener('online', () => {
-            document.getElementById('offline-status').textContent = '✅ Online - Data will sync automatically';
-        });
-
-        window.addEventListener('offline', () => {
-            document.getElementById('offline-status').textContent = '⚠️ Offline - Working locally';
-        });
+    
+        // Check online status with better error handling
+        function updateOnlineStatus() {
+            const offlineStatus = document.getElementById('offline-status');
+            if (offlineStatus) {
+                offlineStatus.textContent = navigator.onLine 
+                    ? '✅ Online - Ready to use' 
+                    : '⚠️ Offline - Working locally';
+            }
+        }
+        
+        window.addEventListener('online', updateOnlineStatus);
+        window.addEventListener('offline', updateOnlineStatus);
+        updateOnlineStatus(); // Initial call
     </script>
 </body>
 </html>
