--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 </head>
+    <script src-"force-refresh.js"></script>
 <body>
     <!-- Welcome/Livestock Selection Screen -->
     <div id="welcome-screen" class="screen active">
