--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <!-- jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
+    <script src="js/debug.js"></script>
 <body>
     <!-- Welcome/Livestock Selection Screen -->
     <div id="welcome-screen" class="screen active">
