--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
     <script src="js/debug.js"></script>
+    <script src="js/emergency-fix.js"></script>
 <body>
     <!-- Welcome/Livestock Selection Screen -->
     <div id="welcome-screen" class="screen active">
